Tercer commit: index acabado

--- a/TA05_HTML-CSS-JS_25_26/index.html
+++ b/TA05_HTML-CSS-JS_25_26/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,11 +15,11 @@
 <header class="navbar">
 <nav>
 <ul>
-<li><a href="#">INICIO</a></li>
-<li><a href="#">PROYECTO 1</a></li>
-<li><a href="#">PROYECTO 2</a></li>
-<li><a href="#">LISTADO DE TODOS LOS PROYECTOS</a></li>
-<li><a href="#">FORMULARIO</a></li>
+<li><a href="./index.html">HOME</a></li>
+<li><a href="./Pages/Project_1.html">PROJECT 1</a></li>
+<li><a href="./Pages/Project_2.html">PROJECT 2</a></li>
+<li><a href="./Pages/All_projects.html">ALL PROJECTS</a></li>
+<li><a href="./Pages/From.html">FORM</a></li>
 </ul>
 </nav>
 </header>
@@ -29,8 +29,13 @@
   <!-- updated: left and right are .proj-card with title + subtext below; center keeps loader -->
   <div class="projects-row">
     <div class="proj-card left">
-      <div class="proj-title">PROYECTO 1</div>
-      <div class="proj-sub">aqui va el texto a elegir</div>
+      <div class="proj-title">EcoSwap</div>
+      <div class="proj-sub">
+        <p>EcoSwap is a platform created by Jesús and Cristian to give a second life to items we no longer use. In a world where we discard more than we reuse, EcoSwap connects people who want to swap books, clothing, electronics and much more.</p>
+        <p>With the help of their "mini-employees" Pablo Tomás Parera and Guillem Chivite, the team seeks to turn waste into opportunities.</p>
+        <p>A project designed to make swapping easy, safe... and surprisingly useful.</p>
+        <p>Do you have something you no longer use? Maybe someone else needs it.</p>
+      </div>
     </div>
 
     <div class="wrapper">
@@ -45,8 +50,13 @@
     </div>
 
     <div class="proj-card right">
-      <div class="proj-title">PROYECTO 2</div>
-      <div class="proj-sub">aqui va el texto a elegir</div>
+      <div class="proj-title">ChefAI</div>
+      <div class="proj-sub">
+        <p>ChefAI is an intelligent web app that tells you what you can cook using ONLY the ingredients you have at home.</p>
+        <p>Jesús and Cristian created this project to help people who don't have the time, ideas, or energy to decide what's for dinner. With the support of helpers Pablo Tomás Parera and Guillem Chivite, the platform combines simplicity and creativity to reduce food waste.</p>
+        <p>Quick, easy recipes tailored to what's in your fridge.</p>
+        <p>Open your kitchen… and let ChefAI do the rest.</p>
+      </div>
     </div>
   </div>
 
@@ -56,7 +66,7 @@
 
 <footer class="footer">
 <div class="footer-box">
-<p>© 2025 CRISTIAN OJEDA, JESUS PALMA — TODOS LOS DERECHOS RESERVADOS — TWITTER | FACEBOOK | INSTAGRAM</p>
+<p>© 2025 CRISTIAN OJEDA, JESUS PALMA — ALL RIGHTS RESERVED — TWITTER | FACEBOOK | INSTAGRAM</p>
 </div>
 </footer>
 
