--- a/TA05_HTML-CSS-JS_25_26/Pages/Project_1.html
+++ b/TA05_HTML-CSS-JS_25_26/Pages/Project_1.html
@@ -91,19 +91,19 @@
         <p class="team-role">UX & visual design — simplifies posting and browsing.</p>
       </article>
 
-      <!-- Pablo (placeholder, no src image yet) -->
+      <!-- Pablo (ahora con foto real) -->
       <article class="team-card" role="listitem">
-        <div class="team-photo empty" aria-hidden="false">
-          <span class="placeholder-text">Photo coming soon</span>
+        <div class="team-photo">
+          <img src="../imagenes/tomas.png" alt="Pablo Tomás Parera — Feature testing and QA" />
         </div>
         <h3 class="team-name">Pablo Tomás Parera</h3>
         <p class="team-role">Feature testing, bug hunting and proposing improvements.</p>
       </article>
 
-      <!-- Guillem (placeholder, no src image yet) -->
+      <!-- Guillem (ahora con foto real) -->
       <article class="team-card" role="listitem">
-        <div class="team-photo empty" aria-hidden="false">
-          <span class="placeholder-text">Photo coming soon</span>
+        <div class="team-photo">
+          <img src="../imagenes/chivite.png" alt="Guillem Chivite — System administration support" />
         </div>
         <h3 class="team-name">Guillem Chivite</h3>
         <p class="team-role">System administration support — monitors server health and load.</p>
