--- a/TA05_HTML-CSS-JS_25_26/Pages/All_projects.html
+++ b/TA05_HTML-CSS-JS_25_26/Pages/All_projects.html
@@ -20,11 +20,41 @@
 </header>
 
 <main class="hyperspace" style="padding:48px 24px;">
-  <section style="max-width:900px; margin:60px auto; text-align:center;">
+  <section style="max-width:1100px; margin:60px auto; text-align:center;">
     <h1 class="proj-title" style="font-size:40px;">All Projects</h1>
-    <ul style="list-style:none; margin-top:28px; font-family: 'Playfair Display', serif; font-size:20px;">
-      <li style="margin:12px 0;"><a href="./Project_1.html">EcoSwap — Project 1</a></li>
-      <li style="margin:12px 0;"><a href="./Project_2.html">ChefAI — Project 2</a></li>
+
+    <!-- Reemplazado: lista vertical -> lista en fila (flex, envolvente) -->
+    <ul class="projects-list" aria-label="Lista de proyectos" style="margin-top:28px;">
+      <li><span class="project-badge">EcoLink</span></li>
+      <li><span class="project-badge">CodeNest</span></li>
+      <li><span class="project-badge">DataWave</span></li>
+      <li><span class="project-badge">Cloudify</span></li>
+      <li><span class="project-badge">SmartHive</span></li>
+      <li><span class="project-badge">ByteFlow</span></li>
+      <li><span class="project-badge">NovaTech</span></li>
+      <li><span class="project-badge">PixelCore</span></li>
+      <li><span class="project-badge">CyberTrack</span></li>
+      <li><span class="project-badge">InfoSphere</span></li>
+      <li><span class="project-badge">TechBridge</span></li>
+      <li><span class="project-badge">QuantumSoft</span></li>
+      <li><span class="project-badge">NetFusion</span></li>
+      <li><span class="project-badge">LogicTree</span></li>
+      <li><span class="project-badge">Virtualia</span></li>
+      <li><span class="project-badge">AppForge</span></li>
+      <li><span class="project-badge">Systemix</span></li>
+      <li><span class="project-badge">BlueCode</span></li>
+      <li><span class="project-badge">GridLab</span></li>
+      <li><span class="project-badge">SoftPulse</span></li>
+      <li><span class="project-badge">HyperNet</span></li>
+      <li><span class="project-badge">DevPoint</span></li>
+      <li><span class="project-badge">FutureStack</span></li>
+      <li><span class="project-badge">MindCode</span></li>
+      <li><span class="project-badge">ByteCraft</span></li>
+      <li><span class="project-badge">NeoSystem</span></li>
+      <li><span class="project-badge">Digitalis</span></li>
+      <li><span class="project-badge">CoreVision</span></li>
+      <li><span class="project-badge">TechLoop</span></li>
+      <li><span class="project-badge">InfinitySoft</span></li>
     </ul>
   </section>
 </main>
@@ -36,4 +66,3 @@
 </footer>
 </body>
 </html>
-
