--- a/TA05_HTML-CSS-JS_25_26/Pages/Project_1.html
+++ b/TA05_HTML-CSS-JS_25_26/Pages/Project_1.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="../estilo/style.css" />
 </head>
 <body>
+  <!-- add starfield canvas -->
+  <canvas id="starfield"></canvas>
+
 <header class="navbar">
   <nav>
     <ul>
@@ -103,7 +106,7 @@
       <!-- Guillem (ahora con foto real) -->
       <article class="team-card" role="listitem">
         <div class="team-photo">
-          <img src="../imagenes/chivite.png" alt="Guillem Chivite — System administration support" />
+          <img src="../imagenes/Chivite.png" alt="Guillem Chivite — System administration support" />
         </div>
         <h3 class="team-name">Guillem Chivite</h3>
         <p class="team-role">System administration support — monitors server health and load.</p>
@@ -145,5 +148,8 @@
     <p>© 2025 CRISTIAN OJEDA, JESUS PALMA — ALL RIGHTS RESERVED</p>
   </div>
 </footer>
+
+<!-- add: main script -->
+<script src="../java.js"></script>
 </body>
 </html>
