--- a/TA05_HTML-CSS-JS_25_26/Pages/Project_2.html
+++ b/TA05_HTML-CSS-JS_25_26/Pages/Project_2.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="../estilo/style.css" />
 </head>
 <body>
+<canvas id="starfield"></canvas>
+
 <header class="navbar">
   <nav>
     <ul>
@@ -106,7 +108,7 @@
       <!-- Guillem Chivite -->
       <article class="team-card" role="listitem">
         <div class="team-photo">
-          <img src="../imagenes/chivite.png" alt="Guillem Chivite — Data organization support" />
+          <img src="../imagenes/Chivite.png" alt="Guillem Chivite — Data organization support" />
         </div>
         <h3 class="team-name">Guillem Chivite</h3>
         <p class="team-role">Helped structure recipe categories and ingredient databases.</p>
@@ -145,6 +147,7 @@
     <p>© 2025 CRISTIAN OJEDA, JESUS PALMA — ALL RIGHTS RESERVED</p>
   </div>
 </footer>
+
+<script src="../java.js"></script>
 </body>
 </html>
-
