--- a/TA05_HTML-CSS-JS_25_26/Pages/All_projects.html
+++ b/TA05_HTML-CSS-JS_25_26/Pages/All_projects.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="../estilo/style.css" />
 </head>
 <body>
+<canvas id="starfield"></canvas>
 <header class="navbar">
   <nav>
     <ul>
@@ -64,5 +65,6 @@
     <p>© 2025 CRISTIAN OJEDA, JESUS PALMA — ALL RIGHTS RESERVED</p>
   </div>
 </footer>
+<script src="../java.js"></script>
 </body>
 </html>
