--- a/TA05_HTML-CSS-JS_25_26/index.html
+++ b/TA05_HTML-CSS-JS_25_26/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<canvas id="starfield"></canvas>
 
 <header class="navbar">
 <nav>
